playbook/roles/nginx-oss/templates/mirrors-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: mirrors
    app.kubernetes.io/name: nginx
  name: mirrors-nginx
  namespace: nginx
spec:
  ingressClassName: apisix
  rules:
  - host: mirrors.onwalk.net
    http:
      paths:
      - backend:
          service:
            name: mirrors-nginx
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - mirrors.onwalk.net
    secretName: nginx-tls
